--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "json-server": "json-server --watch db.json --port 8000",
     "dev": "concurrently \"npm start\" \"npm run json-server\"",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
