:wrench: package.json scripts에 server 실행어 추가

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:server": "node server",
     "build": "react-scripts build",
     "json-server": "json-server --watch db.json --port 8000",
     "dev": "concurrently \"npm start\" \"npm run json-server\"",
