--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.0",
+    "concurrently": "^7.0.0",
+    "json-server": "^0.17.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,6 +21,8 @@
     "start": "react-scripts start",
     "start:server": "node server",
     "build": "react-scripts build",
+    "json-server": "json-server --watch db.json --port 8000",
+    "dev": "concurrently \"npm start\" \"npm run json-server\"",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
@@ -40,9 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^7.0.0",
-    "json-server": "^0.17.0"
   }
 }
