--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^7.0.0",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
+    "nth-check": "2.0.1",
     "postcss": "^8.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
