--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
     "nth-check": "2.0.1",
-    "postcss": "^8.4.6",
+    "postcss": "8.2.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
