--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start:server": "node server",
     "build": "react-scripts build",
     "json-server": "json-server --watch db.json --port 8000",
-    "dev": "concurrently \"npm start\" \"npm run json-server\"",
+    "dev": "npm run start && npm run json-server",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
